# income-tg-bot

./: .env  category_table.csv  config.py  db_structure.md  pyproject.toml  run.py
examples/: .env  00_session.py  01_table.py  02_table_orm.py  04_dml_core.py  06_select.py  07_update.py  08_orm.py  config.py  fucking_around.py
keyboards/: reg_keyboards.py
notes/: general_notes.txt  new_sqlalchemy_notes.txt  sqlalchemy_notes.txt  sqlalchemy_working_notes.txt  words.txt
routers/: __init__.py
routers/commands/: base_commands.py
routers/registration/: __init__.py  registration.py
src/: run.py
src/core/: .env  config.py  database.py  populate_db.py
src/core/models/: __init__.py  base.py
src/examples/: 00_session.py  03_reflection.py  04_dml_core.py  07_update.py  fucking_around.py
src/keyboards/: category_kb.py  reg_keyboards.py  report_keyboards.py  transaction_kb.py
src/middlewares/: middlewares.py
src/providers/: custom_providers.py
src/routers/: __init__.py
src/routers/commands/: __init__.py  commands.py  expenses.py  make_report.py  show_categories.py
src/routers/registration/: __init__.py  registration.py
src/services/: categories.py  exchange_rates.py  registration.py  report.py  transactions.py
src/states/: report_state.py  transaction_state.py
