[project]
name = "financial-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "aiogram>=3.23.0",
    "aiomysql>=0.3.2",
    "alembic>=1.17.2",
    "cryptography>=46.0.3",
    "pydantic-settings>=2.12.0",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.45",
]
